--- a/src/Alipay.Demo.PCPayment/Views/Shared/_Layout.cshtml
+++ b/src/Alipay.Demo.PCPayment/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">首页</a></li>
                     <li><a asp-area="" asp-controller="Pay" asp-action="Index">PC支付</a></li>
-                    
+                    <li><a asp-area="" asp-controller="H5Pay" asp-action="Index">H5支付</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             当面付
@@ -43,7 +43,7 @@
                             <li><a asp-controller="FTFPay" asp-action="Scan">扫码支付</a></li>
                         </ul>
                     </li>
-                    
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             订单操作
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
 
-                    
+
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
